Andromeda-annulus-calc-10600592-error.log
  File "M31_signal_vs_entire_sky.py", line 665
    plt.savefig(f"{path}" + "M31_signal_vs_entire_sky.png", dpi=600, bbox_inches="tight")#Saving as image
    ^
IndentationError: unexpected indent
